some more porting stuff, 65 errors remain