@@ -100,11 +100,11 @@ public final class Codecs {
 	}
 
 	public static <T> Codec<T> fromRegistry(Registry<T> registry) {
-		return ResourceLocation.CODEC.xmap(registry::get, registry::getKey);
+		return ResourceLocation.CODEC.xmap(registry::getValue, registry::getKey);
 	}
 
 	public static <E> DataResult<Pair<E, E>> arrayToPair(List<E> list) {
-		return Util.fixedSize(list, 2).map(l -> Pair.of(l.get(0), l.get(1)));
+		return Util.fixedSize(list, 2).map(l -> Pair.of(l.getFirst(), l.get(1)));
 	}
 
 	private static DataResult<MapColor> validateMapColor(MapColor color) {
